force-app/main/default/objects/Publications__c/fields/Applicant_Proposal_Association__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Proposal_Association__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant Proposal Association</label>
    <referenceTo>Applicant_Proposal_Association__c</referenceTo>
    <relationshipName>Publications_Patents</relationshipName>
    <type>Lookup</type>
</CustomField>