force-app/main/default/objects/Publications__c/fields/Applicant_Role__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Role__c</fullName>
    <inlineHelpText>Applicant Role (First, Joint-first, Middle, Corresponding Author)</inlineHelpText>
    <label>Applicant Role</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>