force-app/main/default/objects/Publications__c/fields/Author_Names__c.field-meta.xml
<CustomField>
    <fullName>Author_Names__c</fullName>
    <inlineHelpText>(Use “et al” only if there are more than six authors)</inlineHelpText>
    <label>Author Names</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>