force-app/main/default/objects/Publications__c/fields/Journal_Name__c.field-meta.xml
<CustomField>
    <fullName>Journal_Name__c</fullName>
    <label>Journal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>