force-app/main/default/objects/Publications__c/fields/Number_of_citations_at_present__c.field-meta.xml
<CustomField>
    <fullName>Number_of_citations_at_present__c</fullName>
    <label>Number of citations at present</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>