force-app/main/default/objects/Publications__c/fields/PMID_DOI_URL__c.field-meta.xml
<CustomField>
    <fullName>PMID_DOI_URL__c</fullName>
    <label>PMID / DOI / URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>