force-app/main/default/objects/Publications__c/fields/Sr_No__c.field-meta.xml
<CustomField>
    <fullName>Sr_No__c</fullName>
    <label>Sr. No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>