force-app/main/default/objects/Publications__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Applicant_Proposal_Association__c</columns>
    <columns>Journal_Name__c</columns>
    <columns>Applicant_Role__c</columns>
    <columns>Author_Names__c</columns>
    <columns>Sr_No__c</columns>
    <columns>Number_of_citations_at_present__c</columns>
    <columns>PMID_DOI_URL__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>